# coding-agent-preheat

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
scripts/: create-dmg.sh
src/: App.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: ai.json  default.json  tools.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  fs.rs  mod.rs  shell.rs  system.rs  warmup.rs
src-tauri/src/models/: mod.rs  warmup.rs
src-tauri/src/services/: ai_service.rs  fs_service.rs  mod.rs  shell_service.rs  warmup_service.rs
src/components/layout/: AppShell.tsx
src/components/ui/: Button.tsx
src/features/ai/: index.ts
src/features/tools/: index.ts
src/features/warmup/: utils.ts
src/lib/: env.ts  http.ts  utils.ts
src/lib/tauri/: events.ts  index.ts  types.ts
src/lib/tauri/commands/: ai.ts  fs.ts  index.ts  shell.ts  warmup.ts
src/pages/ai/: index.tsx
src/pages/home/: index.tsx
src/pages/logs/: index.tsx
src/pages/schedules/: index.tsx
src/pages/tools/: index.tsx
src/stores/: app.ts
src/styles/: globals.css
