[package]
name = "desktop-tauri-template"
version = "0.1.0"
description = "A Tauri 2.x desktop template (React + TS, business / tools / AI)"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "desktop_tauri_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ===== Tauri 核心 =====
tauri = { version = "2", features = [] }

# ===== 官方插件 =====
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"

# ===== 通用依赖 =====
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
