[package]
name = "coding-agent-preheat"
version = "0.1.1"
description = "Local macOS warmup scheduler for coding agents"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "coding_agent_preheat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ===== Tauri 核心 =====
tauri = { version = "2", features = ["tray-icon"] }

# ===== 官方插件 =====
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"

# ===== 通用依赖 =====
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "time"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
shell-words = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
